<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    	<EditText
    	    android:id="@+id/usernameEditTxt"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:hint="@string/username_hinttext" />

    	<EditText
    	    android:id="@+id/pwdEditTxt"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:hint="@string/password_hinttext" />

    	<CheckBox
    	    android:id="@+id/checkCredsOnSavecheckBox"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:text="@string/checkboxtext" />

    	

    	<Button
    	    android:id="@+id/saveBtn"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:text="@string/saveBtnText" />

</LinearLayout>